# type-trait-cpp

./: README.md
src/: CMakeLists.txt
src/include/: type_trait.h
src/test/: test  test.cc
